add: finito parzialmente mancanza di tempo :(

--- a/index.html
+++ b/index.html
@@ -6,7 +6,125 @@
 <link rel="stylesheet" href="./css/app.css">
     <title>Booleando</title>
 </head>
-<body>
-    
+
+    <header class="page-header">
+        <div class="container">
+            <nav class="row">
+                 <ul class="main-menu">
+                    <li class="menu-item">
+                        Donna
+                    </li>
+                    <li class="menu-item">
+                        Uomo
+                    </li>
+                    <li class="menu-item">
+                        Bambini
+                    </li>
+                </ul>
+                <div class="logo">
+                    <img src="./img/boolean-logo.png" alt="logo di boolean">
+                    </div>
+                <ul class="account-menu">
+                    <li class="account-item">
+                        <a class="account-link" href="#">Account</a></li>
+                    <li class="account-item">
+                        <a class="account-link" href="#">Carrello</a>
+                    </li>
+                    <li class="account-item">
+                        <a class="account-link" href="#">Preferiti</a>
+                    </li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
+                            <!--TITLE MAIN-->
+    <section class="main-title">
+        <div class="container">
+            <h2>Boolando</h2>
+            <h3>Resi e spedizioni gratuite!</h3>
+        </div>
+    </section>
+    <!--MAIN CONTENT WITH PRODUCT-->
+
+    <section class="main-product">              
+        <div class="container">
+            <div class="row">
+
+                <div class="col-33">
+                    <div class="info-prod">
+                        <img src="./img/1.webp" alt="">
+                        <div class="Brand">Levis</div>
+                        <div class="name-prod">RELAXED FIT TEE</div>
+                        <div class="price-prod prod-sale-from">29,99</div>
+                    </div>
+                </div>
+                
+                <div class="col-33">
+                    <div class="info-prod">
+                        <img src="./img/2.webp" alt="">
+                        <div class="Brand">Levis</div>
+                        <div class="name-prod">RELAXED FIT TEE</div>
+                        <div class="price-prod prod-sale-from">29,99</div>
+                     </div>
+                </div>
+                <div class="col-33">
+                    <div class="info-prod">
+                        <img src="./img/3.webp" alt="">
+                        <div class="Brand">Levis</div>
+                        <div class="name-prod">RELAXED FIT TEE</div>
+                        <div class="price-prod prod-sale-from">40,00</div>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="info-prod">
+                        <img src="./img/4.webp" alt="">
+                        <div class="Brand">Levis</div>
+                        <div class="name-prod">RELAXED FIT TEE</div>
+                        <div class="price-prod prod-sale-from">39,99</div>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="info-prod">
+                        <img src="./img/5.webp" alt="">
+                        <div class="Brand">Levis</div>
+                        <div class="name-prod">RELAXED FIT TEE</div>
+                        <div class="price-prod prod-sale-from">19,99</div>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="info-prod">
+                        <img src="./img/6.webp" alt="">
+                        <div class="Brand">Levis</div>
+                        <div class="name-prod">RELAXED FIT TEE</div>
+                        <div class="price-prod prod-sale-from">15,99</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="title-footer"><h2>Booleando</h2></div>
+                    <ul class="info-footer">
+                        <li class="info-item">Informazione legali</li>
+                        <li class="info-item">Informazioni sulla privacy</li>
+                        <li class="info-item">Diritto di recesso</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <div class="">Ci trovi anche su</div>
+                    <div class="social-footer">instagram</div>
+                    <div class="social-footer">facebook</div>
+                    <div class="social-footer">tiktok</div>
+                    <div class="social-footer">twitter</div>
+                    <div class="social-footer">whatsapp</div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
